@@ -766,14 +766,6 @@ public class DatabaseDescriptor
         currentIndex = (currentIndex + 1) % conf.data_file_directories.length;
         return dataFileDirectory;
     }
-    
-    /* threshold after which commit log should be rotated. */
-    public static int getCommitLogSegmentSize() 
-    {
-        return conf.commitlog_rotation_threshold_in_mb != null ?
-               conf.commitlog_rotation_threshold_in_mb * 1024 * 1024 :
-               128*1024*1024;
-    }
 
     public static String getCommitLogLocation()
     {
