@@ -1,6 +1,7 @@
 1.0-dev
  * removed binarymemtable (CASSANDRA-2692)
  * add commitlog_total_space_in_mb to prevent fragmented logs (CASSANDRA-2427)
+ * removed commitlog_rotation_threshold_in_mb configuration (CASSANDRA-2771)
 
 
 0.8.1
